tests/negative/neg_pr1111c_unsupported_generic_type.safe
package neg_pr1111c_unsupported_generic_type

   type box of t is integer;

